7-kubernetes/task11-app-updates/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rollings
  namespace: app
  labels:
    app: nginx-multitool
spec:
  replicas: 5
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 20%
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
      - name: nginx
        image: nginx:1.28.0
        ports:
        - containerPort: 80
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 8080
        - containerPort: 10443
