7-kubernetes/task11-app-updates/service-v2.yml
apiVersion: v1
kind: Service
metadata:
  name: app-v2-canary-service
  namespace: app
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: nginx-multitool
    version: v2
